// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkVcdm11BitstringStatusListCredential > checkVcdm11BitstringStatusListCredential > should return false when the credential is not a valid BitstringStatusListCredential 1`] = `
{
  "error": "{
  "@context": [
    "https://www.w3.org/2018/credentials/v1"
  ],
  "credentialSchema": {
    "id": "https://example.net",
    "type": "FullJsonSchemaValidator2021"
  },
  "credentialSubject": {
    "encodedList": "H4sIAAAAAAAAA-3BMQEAAADCoPVPbQwfoAAAAAAAAAAAAAAAAAAAAIC3AYbSVKsAQAAA",
    "id": "https://example.net/creds/1#list",
    "statusPurpose": "revocation",
    "type": "BitstringStatusList"
  },
  "id": "https://example.net/creds/1",
  "issuanceDate": "2021-04-05T14:27:40Z",
  "issued": "2021-04-05T14:27:40Z",
  "issuer": "did:ebsi:example",
  "validFrom": "2021-04-05T14:27:40Z",
  "type" [31m[1][0m: [
    "VerifiableCredential",
    "InvalidBitstringStatusListCredential"
  ]
}
[31m
[1] "type" does not contain 1 required value(s)[0m",
  "success": false,
}
`;

exports[`checkVcdm11BitstringStatusListCredential > vcdm11BitstringStatusListCredentialSchema > should throw an error when asserting an invalid object 1`] = `
[ValidationError: {
  "@context": [
    "https://www.w3.org/2018/credentials/v1"
  ],
  "credentialSchema": {
    "id": "https://example.net",
    "type": "FullJsonSchemaValidator2021"
  },
  "credentialSubject": {
    "encodedList": "H4sIAAAAAAAAA-3BMQEAAADCoPVPbQwfoAAAAAAAAAAAAAAAAAAAAIC3AYbSVKsAQAAA",
    "id": "https://example.net/creds/1#list",
    "type": "BitstringStatusList",
    "statusPurpose" [31m[1][0m: "invalid"
  },
  "id": "https://example.net/creds/1",
  "issuanceDate": "2021-04-05T14:27:40Z",
  "issued": "2021-04-05T14:27:40Z",
  "issuer": "did:ebsi:example",
  "validFrom": "2021-04-05T14:27:40Z",
  "type" [31m[3][0m: [
    "VerifiableAttestation", [31m[2][0m
    "VerifiableCredential"
  ]
}
[31m
[1] "credentialSubject.statusPurpose" must be one of [refresh, revocation, suspension, message]
[2] "type[0]" must be [VerifiableCredential]
[3] "type" does not contain 1 required value(s)[0m]
`;

exports[`checkVcdm20BitstringStatusListCredential > checkVcdm20BitstringStatusListCredential > should return false when the credential is not a valid BitstringStatusListCredential 1`] = `
{
  "error": "{
  "@context": [
    "https://www.w3.org/ns/credentials/v2"
  ],
  "credentialSchema": {
    "id": "https://example.net",
    "type": "FullJsonSchemaValidator2021"
  },
  "credentialSubject": {
    "encodedList": "H4sIAAAAAAAAA-3BMQEAAADCoPVPbQwfoAAAAAAAAAAAAAAAAAAAAIC3AYbSVKsAQAAA",
    "id": "https://example.net/creds/1#list",
    "statusPurpose": "revocation",
    "type": "BitstringStatusList"
  },
  "id": "https://example.net/creds/1",
  "issuanceDate": "2021-04-05T14:27:40Z",
  "issued": "2021-04-05T14:27:40Z",
  "issuer": "did:ebsi:example",
  "validFrom": "2021-04-05T14:27:40Z",
  "type" [31m[1][0m: [
    "VerifiableCredential",
    "InvalidBitstringStatusListCredential"
  ]
}
[31m
[1] "type" does not contain 1 required value(s)[0m",
  "success": false,
}
`;

exports[`checkVcdm20BitstringStatusListCredential > vcdm20BitstringStatusListCredentialSchema > should throw an error when asserting an invalid object 1`] = `
[ValidationError: {
  "@context": [
    "https://www.w3.org/2018/credentials/v1" [31m[1][0m
  ],
  "credentialSchema": {
    "id": "https://example.net",
    "type": "FullJsonSchemaValidator2021"
  },
  "credentialSubject": {
    "encodedList": "H4sIAAAAAAAAA-3BMQEAAADCoPVPbQwfoAAAAAAAAAAAAAAAAAAAAIC3AYbSVKsAQAAA",
    "id": "https://example.net/creds/1#list",
    "type": "BitstringStatusList",
    "statusPurpose" [31m[2][0m: "invalid"
  },
  "id": "https://example.net/creds/1",
  "issuanceDate": "2021-04-05T14:27:40Z",
  "issued": "2021-04-05T14:27:40Z",
  "issuer": "did:ebsi:example",
  "validFrom": "2021-04-05T14:27:40Z",
  "type" [31m[4][0m: [
    "VerifiableAttestation", [31m[3][0m
    "VerifiableCredential"
  ]
}
[31m
[1] "@context[0]" must be [https://www.w3.org/ns/credentials/v2]
[2] "credentialSubject.statusPurpose" must be one of [refresh, revocation, suspension, message]
[3] "type[0]" must be [VerifiableCredential]
[4] "type" does not contain 1 required value(s)[0m]
`;
